--- a/styles.css
+++ b/styles.css
@@ -66,6 +66,7 @@ caption {
 
 section {
     z-index: 2;
+    overflow-x: hidden;
 }
 
 ._section {
@@ -109,6 +110,16 @@ body {
 
 /* Intro */
 
+._open {
+    height: 100vh;
+    width: 100vw;
+    overflow-y: hidden;
+}
+
+._first {
+    display: none;
+}
+
 ._intro {
     /* display: none; */
     position: absolute;
@@ -140,7 +151,11 @@ body {
 
 ._blueprint {
     position: absolute;
-    z-index: -1;
+    z-index: -100;
+    opacity: 50%;
+}
+
+._blueprint ._heroBlueprint {
     mix-blend-mode: screen;
 }
 
@@ -154,5 +169,9 @@ body {
 }
 
 ._questionBackground {
-    mask-image: linear-gradient(to right, white 50%, transparent);
+    mask-image: linear-gradient(to right, white 10%, transparent);
+}
+
+._questionBlueprint {
+    margin-right: 10rem;
 }
