--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,7 @@ caption {
 }
 
 section {
+    padding: 0;
     z-index: 2;
 }
 
@@ -73,7 +74,6 @@ section {
     height: 100vh;
     width: 100%;
     margin: 0;
-    padding: 2rem;
     background-color: var(--lightBackground);
 }
 
