--- a/styles.css
+++ b/styles.css
@@ -43,8 +43,10 @@ h2 {
 }
 
 h3 {
+    margin: 1rem 0 0.5rem 0;
     font-family: var(--headingFont);
-    font-size: 49px;
+    font-size: 24px;
+    color: var(--lightHighlight);
 }
 
 h4 {
@@ -68,6 +70,7 @@ p {
     line-height: 2em;
     text-align: left;
     font-family: var(--bodyFont);
+    font-size: 16px;
 }
 
 caption {
