--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,14 @@ caption {
         translateY(-3%)
 }
 
+#-introAnimtion {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+}
+
 /* <--/--> */
 
 /* Intro */
